Tags JS and CSS

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import "../sass/base/typography";
 
 // Import Components
+@import "./components/tag";
 
 //  Import Layout
 @import "../sass/layout/header";
