--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,9 +7,11 @@
 
 // Import Components
 @import "./components/tag";
+@import "./components/card";
 
 //  Import Layout
 @import "../sass/layout/header";
+@import "./layout/main";
 
 // Import Pages
 @import "../sass/pages/index";
