--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 
 // Import Components
 @import "./components/tag";
+@import "./components/dropdown";
 @import "./components/card";
 
 //  Import Layout
