--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -4,6 +4,8 @@
   padding: 0.5rem;
   border-radius: 5px;
   margin-right: 1rem;
+  height: 60px;
+  overflow: hidden;
   &__input {
     width: 90%;
     background-color: inherit;
@@ -16,6 +18,7 @@
     color: white;
   }
   &__list {
+    width: 120px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     -moz-column-gap: 1rem;
