--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -16,6 +16,7 @@
   &__select {
     padding: 0 1rem;
     color: white;
+    cursor: pointer;
   }
   &__list {
     width: 120px;
@@ -25,11 +26,14 @@
     column-gap: 1rem;
     row-gap: 0.5rem;
     padding: 0.5rem 1rem;
+    max-height: 490px;
+    overflow: scroll;
     &__item {
       color: white;
       padding: 0.3rem;
       cursor: pointer;
       border-radius: 5px;
+      overflow-wrap: break-word;
     }
   }
 }
@@ -54,4 +58,13 @@
 }
 .ustensil {
   background-color: $colortertiary;
+}
+
+@media screen and (max-width: 850px) {
+  .dropdown {
+    margin-bottom: 1rem;
+    &__list {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
 }
